Change in script: Numeric controls now also use data-target instead of rel attribute.
Change in docs: The explorer effects demo shows, when you select a prefix, what effects that prefix hits.

3.3.0
Change in script: Fixed that an empty slider didn't work, and that ajaxloaded images would load wrong in some situations.
Change in script: Added a new option: "touch". When enabled you can swipe the slider back and forwards using mouse of touch input.
Change in script: Changed the touch demo from using touchSwipe to using the new option. Also removed touchSwipe script from the js/lib/ folder.
Change in script: Added the touchHandle option. So you can specify what the user can drag. Even something that isn't within the slider.
Change in docs: Added touchHandle demo.
Change in docs: Added touchHandle outside slider demo.
Change in script: Fixed that continuous with ajax content bugged.
Change in script: InsertSlide now accepts negative number for positions. -1 equals inserting a slide in the far right of the slider, -2 one left of that etc.
Change in script: The setOption method now also accepts an object, that represents option names and option values to be changed.
Change in docs: Removed the "Responsive height/width" demo.
Change in script: The controls container now has class="controls" instead of id="controls". And the container for the numeric controls has class="numericControls" instead of class="controls". These are just new default option values, they can easily be changed through options.
Change in script: The container that has the slide now has class="slidesContainer" and each slide has class="slide"
Change in script: Added a destroyCallback option. It is called after the slider has been destroyed (that includes when options are changed).
Change in script: New effects, added optional suffix "Rounded" to all grow effects. Try it out in the all effects demo. Now 132 effects.