@@ -1,53 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	<title>Sudo Slider | Responsive height/width</title>
-	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-	<link rel="STYLESHEET" type="text/css" href="../css/style.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="../js/jquery.sudoSlider.min.js"></script>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			var sudoSlider = $("#slider").sudoSlider({
-				responsive: true,
-				prevNext: false,
-                numeric: true,
-				continuous:true,
-                autoHeight: false
-			});
-		});
-	</script>
-	<style>
-        #slider img {max-height: 100%;max-width: 100%;}
-	</style>
-
-</head>
-<body>
-<div style="height:100%;width:100%;">
-    <div style="position:absolute;width:100%;top:0px;left:0px;right:0px;bottom:180px;text-align: center;">
-        <h1>Sudo Slider jQuery Plugin - Responsive height/width</h1>
-		<div id="slider">
-            <div><img src="../images/06.jpg" alt="image description"/></div>
-            <div><img src="../images/07.jpg" alt="image description"/></div>
-            <div><img src="../images/08.jpg" alt="image description"/></div>
-    	</div>
-        <h2>Try to make the window really small, and see that the slider shrink to make room. </h2>
-        <h3>Usage: See source code</h3>
-	</div>
-</div>
-
-<script type="text/javascript">
-    /* Google Analytics, please remove
-     var _gaq = _gaq || [];
-     _gaq.push(['_setAccount', 'UA-20484420-1']);
-     _gaq.push(['_trackPageview']);
-
-     (function() {
-     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-     /* */
-</script>
-</body>
-</html>
