@@ -409,3 +409,4 @@ Change in script: The controls container now has class="controls" instead of id=
 Change in script: The container that has the slide now has class="slidesContainer" and each slide has class="slide"
 Change in script: Added a destroyCallback option. It is called after the slider has been destroyed (that includes when options are changed).
 Change in script: New effects, added optional suffix "Rounded" to all grow effects. Try it out in the all effects demo. Now 132 effects.
+Change in script: Fixed that when preloadAjax was false, nothing except the first slide was ever loaded. And other problems related to Ajax.
